--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <meta name="author" content="Martin Sjogard">
 <meta name="keywords" content="neuroscience, EEG, MEG, sleep research, data science, Martin Sjoegaard">
-<meta name="description" content="Brain and data stuff.">
+<meta name="description" content="Brain and data stuff">
 
 <title>Martin Sjogard | Neuroscience, Data Science, and Research – Martin Sjogard</title>
 <style>
@@ -159,7 +159,7 @@ ul.task-list li input[type="checkbox"] {
 
 <div>
   <div class="description">
-    Brain and data stuff.
+    Brain and data stuff
   </div>
 </div>
 
