deploy: 3d8e5f7db1219bc751990c7a17c873b9ac659796

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ ul.task-list li input[type="checkbox"] {
   </a>
   <a href="https://scholar.google.com/citations?hl=en&amp;user=F59U3gEAAAAJ&amp;view_op=list_works&amp;sortby=pubdate" class="about-link" rel="" target="">
     <i class="bi bi-file-text"></i>
-     <span class="about-link-text">GoogleScholar</span>
+     <span class="about-link-text">Google Scholar</span>
   </a>
 </div>
   </div>
@@ -184,6 +184,7 @@ ul.task-list li input[type="checkbox"] {
 
 <section id="about-me" class="level2">
 <h2 data-anchor-id="about-me">About Me</h2>
+<p>On the left is a 3D printed model of my own actual brain, made from an MRI scan.</p>
 <p>I am a clinical data scientist in the <a href="https://manoachlab.mgh.harvard.edu/">Sleep, Cognition and Neuropsychology</a> lab at <a href="https://www.massgeneral.org/">Massachusetts General Hospital</a> and a postdoctoral research fellow at <a href="https://hms.harvard.edu/">Harvard Medical School</a>.</p>
 <p>My expertise is in statistical and computational analysis of health-related data, with a focus on neuroimaging and electrophysiological signals in neuropsychiatric disorders. I create and maintain validated, reproducible analysis pipelines and develop advanced statistical methods to support translational research and biomarker discovery. You can read up on some of my methods development work in <a href="https://www.frontiersin.org/journals/neurology/articles/10.3389/fneur.2022.871166/full">anatomically guided MEG/EEG sleep spindle detection</a> and <a href="https://www.sciencedirect.com/science/article/abs/pii/S105381191930549X">resolving source localization disagreement in resting-state networks</a>, or my work on <a href="https://onlinelibrary.wiley.com/doi/pdf/10.1002/hbm.25247">the relationship between cortical network disruption and cognitive impairment in multiple sclerosis</a>, how sleep spindles topography relates to memory encoding and consolidation, or how <a href="https://www.nature.com/articles/s41467-025-61136-y">hippocampal ripples facilitate wake offline learning</a>.</p>
 <p>I received a PhD in Biomedical and Pharmaceutical Sciences at the <a href="https://www.ulb.be/en/ulb-homepage">Université libre de Bruxelles</a> and hold a master’s degree in Neuroscience and a bachelor’s degree in Human Movement Science, both from the <a href="https://www.ntnu.edu/">Norwegian University of Science and Technology</a>.</p>
