--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Martin Sjogard | Neuroscience, Data Science, and Research – Martin Sjogard</title>
+<title>Martin Sjogard | Brain and data stuff – Martin Sjogard</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -163,8 +163,7 @@ ul.task-list li input[type="checkbox"] {
   round " style="height: 20em; width: 20em;">
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Martin Sjogard | Neuroscience, Data Science, and Research</h1>
-<p class="subtitle lead">Brain and data stuff.</p>
+<h1 class="title">Martin Sjogard | Brain and data stuff</h1>
 </div>
 <div class="quarto-title-meta">
   </div>
@@ -184,7 +183,7 @@ ul.task-list li input[type="checkbox"] {
 
 <section id="about-me" class="level2">
 <h2 data-anchor-id="about-me">About Me</h2>
-<p>On the left is a 3D printed model of my own actual brain, made from an MRI scan.</p>
+<p>On the left is a high-resolution 3D printed copy of my own brain.</p>
 <p>I am a clinical data scientist in the <a href="https://manoachlab.mgh.harvard.edu/">Sleep, Cognition and Neuropsychology</a> lab at <a href="https://www.massgeneral.org/">Massachusetts General Hospital</a> and a postdoctoral research fellow at <a href="https://hms.harvard.edu/">Harvard Medical School</a>.</p>
 <p>My expertise is in statistical and computational analysis of health-related data, with a focus on neuroimaging and electrophysiological signals in neuropsychiatric disorders. I create and maintain validated, reproducible analysis pipelines and develop advanced statistical methods to support translational research and biomarker discovery. You can read up on some of my methods development work in <a href="https://www.frontiersin.org/journals/neurology/articles/10.3389/fneur.2022.871166/full">anatomically guided MEG/EEG sleep spindle detection</a> and <a href="https://www.sciencedirect.com/science/article/abs/pii/S105381191930549X">resolving source localization disagreement in resting-state networks</a>, or my work on <a href="https://onlinelibrary.wiley.com/doi/pdf/10.1002/hbm.25247">the relationship between cortical network disruption and cognitive impairment in multiple sclerosis</a>, how sleep spindles topography relates to memory encoding and consolidation, or how <a href="https://www.nature.com/articles/s41467-025-61136-y">hippocampal ripples facilitate wake offline learning</a>.</p>
 <p>I received a PhD in Biomedical and Pharmaceutical Sciences at the <a href="https://www.ulb.be/en/ulb-homepage">Université libre de Bruxelles</a> and hold a master’s degree in Neuroscience and a bachelor’s degree in Human Movement Science, both from the <a href="https://www.ntnu.edu/">Norwegian University of Science and Technology</a>.</p>
