--- a/index.html
+++ b/index.html
@@ -177,6 +177,10 @@ ul.task-list li input[type="checkbox"] {
     <i class="bi bi-file-text"></i>
      <span class="about-link-text">Google Scholar</span>
   </a>
+  <a href="/CV_Martin_Sjogard.pdf" class="about-link" rel="" target="">
+    <i class="bi bi-file-text"></i>
+     <span class="about-link-text">CV</span>
+  </a>
 </div>
   </div>
   <div class="about-contents"><main class="content" id="quarto-document-content">
