--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@ ul.task-list li input[type="checkbox"] {
     "search-label": "Search"
   }
 }</script>
+<script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 
 
 <link rel="stylesheet" href="custom.css">
@@ -175,8 +176,7 @@ ul.task-list li input[type="checkbox"] {
 </header>
     <div class="about-links">
   <a href="https://www.linkedin.com/in/martinsjogard/" class="about-link" rel="" target="">
-    <i class="bi bi-linkedin"></i>
-     <span class="about-link-text">LinkedIn</span>
+     <span class="about-link-text">{{&lt; iconify fa6-brands linkedin &gt;}}</span>
   </a>
   <a href="https://scholar.google.com/citations?hl=en&amp;user=F59U3gEAAAAJ&amp;view_op=list_works&amp;sortby=pubdate" class="about-link" rel="" target="">
     <i class="bi bi-file-text"></i>
@@ -188,7 +188,7 @@ ul.task-list li input[type="checkbox"] {
   </a>
   <a href="mailto:martinsjogard@gmail.com" class="about-link" rel="" target="">
     <i class="bi bi-envelope"></i>
-     <span class="about-link-text"></span>
+     <span class="about-link-text">email</span>
   </a>
 </div>
   </div>
