deploy: ca3e51defd8f8dc77b04db005e6f6aaf59d4540a

--- a/index.html
+++ b/index.html
@@ -178,6 +178,18 @@ ul.task-list li input[type="checkbox"] {
   <a href="https://www.linkedin.com/in/martinsjogard/" class="about-link" rel="" target="">
      <span class="about-link-text">{{&lt; iconify fa6-brands linkedin &gt;}}</span>
   </a>
+  <a href="https://scholar.google.com/citations?hl=en&amp;user=F59U3gEAAAAJ&amp;view_op=list_works&amp;sortby=pubdate" class="about-link" rel="" target="">
+    <i class="bi bi-file-text"></i>
+     <span class="about-link-text">Google Scholar</span>
+  </a>
+  <a href="/CV_Martin_Sjogard.pdf" class="about-link" rel="" target="">
+    <i class="bi bi-file-text"></i>
+     <span class="about-link-text">CV</span>
+  </a>
+  <a href="mailto:martinsjogard@gmail.com" class="about-link" rel="" target="">
+    <i class="bi bi-envelope"></i>
+     <span class="about-link-text">email</span>
+  </a>
 </div>
   </div>
   <div class="about-contents"><main class="content" id="quarto-document-content">
