--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ ul.task-list li input[type="checkbox"] {
 <script src="site_libs/bootstrap/bootstrap.min.js"></script>
 <link href="site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
 <link href="site_libs/bootstrap/bootstrap-cd50b353c931046fa4bb2a08b54cb241.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
+<script src="site_libs/quarto-contrib/iconify-3.0.0/iconify-icon.min.js"></script>
 <script id="quarto-search-options" type="application/json">{
   "location": "navbar",
   "copy-button": false,
@@ -176,7 +177,7 @@ ul.task-list li input[type="checkbox"] {
 </header>
     <div class="about-links">
   <a href="https://www.linkedin.com/in/martinsjogard/" class="about-link" rel="" target="">
-     <span class="about-link-text">{{&lt; iconify fa6-brands linkedin &gt;}}</span>
+     <span class="about-link-text"><iconify-icon role="img" inline="" icon="fa6-brands:linkedin" aria-label="Icon linkedin from fa6-brands Iconify.design set." title="Icon linkedin from fa6-brands Iconify.design set."></iconify-icon></span>
   </a>
   <a href="https://scholar.google.com/citations?hl=en&amp;user=F59U3gEAAAAJ&amp;view_op=list_works&amp;sortby=pubdate" class="about-link" rel="" target="">
     <i class="bi bi-file-text"></i>
