deploy: 66f7800055e9feb370d771a38ef4ae70a8bd2c8f

--- a/index.html
+++ b/index.html
@@ -177,19 +177,16 @@ ul.task-list li input[type="checkbox"] {
 </header>
     <div class="about-links">
   <a href="https://www.linkedin.com/in/martinsjogard/" class="about-link" rel="" target="">
-     <span class="about-link-text"><iconify-icon role="img" inline="" icon="fa6-brands:linkedin" aria-label="Icon linkedin from fa6-brands Iconify.design set." title="Icon linkedin from fa6-brands Iconify.design set."></iconify-icon></span>
+     <span class="about-link-text"><iconify-icon role="img" inline="" icon="fa:linkedin-square" aria-label="Icon linkedin-square from fa Iconify.design set." title="Icon linkedin-square from fa Iconify.design set."></iconify-icon></span>
   </a>
   <a href="https://scholar.google.com/citations?hl=en&amp;user=F59U3gEAAAAJ&amp;view_op=list_works&amp;sortby=pubdate" class="about-link" rel="" target="">
-    <i class="bi bi-file-text"></i>
-     <span class="about-link-text">Google Scholar</span>
+     <span class="about-link-text">{{&lt; academicons google-scholar-square&gt;}}</span>
   </a>
   <a href="/CV_Martin_Sjogard.pdf" class="about-link" rel="" target="">
-    <i class="bi bi-file-text"></i>
-     <span class="about-link-text">CV</span>
+     <span class="about-link-text">{{&lt; academicons cv-square&gt;}}</span>
   </a>
   <a href="mailto:martinsjogard@gmail.com" class="about-link" rel="" target="">
-    <i class="bi bi-envelope"></i>
-     <span class="about-link-text">email</span>
+     <span class="about-link-text">{{&lt; fa-solid envelope&gt;}}</span>
   </a>
 </div>
   </div>
