--- a/index.html
+++ b/index.html
@@ -180,13 +180,13 @@ ul.task-list li input[type="checkbox"] {
      <span class="about-link-text"><iconify-icon role="img" inline="" icon="fa:linkedin-square" aria-label="Icon linkedin-square from fa Iconify.design set." title="Icon linkedin-square from fa Iconify.design set."></iconify-icon></span>
   </a>
   <a href="https://scholar.google.com/citations?hl=en&amp;user=F59U3gEAAAAJ&amp;view_op=list_works&amp;sortby=pubdate" class="about-link" rel="" target="">
-     <span class="about-link-text">{{&lt; academicons google-scholar-square&gt;}}</span>
+     <span class="about-link-text"><iconify-icon role="img" inline="" icon="academicons:google-scholar-square" aria-label="Icon google-scholar-square from academicons Iconify.design set." title="Icon google-scholar-square from academicons Iconify.design set."></iconify-icon></span>
   </a>
   <a href="/CV_Martin_Sjogard.pdf" class="about-link" rel="" target="">
-     <span class="about-link-text">{{&lt; academicons cv-square&gt;}}</span>
+     <span class="about-link-text"><iconify-icon role="img" inline="" icon="academicons:cv-square" aria-label="Icon cv-square from academicons Iconify.design set." title="Icon cv-square from academicons Iconify.design set."></iconify-icon></span>
   </a>
   <a href="mailto:martinsjogard@gmail.com" class="about-link" rel="" target="">
-     <span class="about-link-text">{{&lt; fa-solid envelope&gt;}}</span>
+     <span class="about-link-text"><iconify-icon role="img" inline="" icon="fa-solid:envelope" aria-label="Icon envelope from fa-solid Iconify.design set." title="Icon envelope from fa-solid Iconify.design set."></iconify-icon></span>
   </a>
 </div>
   </div>
