deploy: 56650bd159e31ed9f5bafad5d75ef3c3065179cd

--- a/index.html
+++ b/index.html
@@ -177,16 +177,16 @@ ul.task-list li input[type="checkbox"] {
 </header>
     <div class="about-links">
   <a href="https://www.linkedin.com/in/martinsjogard/" class="about-link" rel="" target="">
-     <span class="about-link-text"><iconify-icon role="img" inline="" icon="fa:linkedin-square" aria-label="Icon linkedin-square from fa Iconify.design set." title="Icon linkedin-square from fa Iconify.design set."></iconify-icon></span>
+     <span class="about-link-text"><iconify-icon role="img" inline="" icon="fa:linkedin-square" style="font-size: 2.5em;" aria-label="Icon linkedin-square from fa Iconify.design set." title="Icon linkedin-square from fa Iconify.design set."></iconify-icon></span>
   </a>
   <a href="https://scholar.google.com/citations?hl=en&amp;user=F59U3gEAAAAJ&amp;view_op=list_works&amp;sortby=pubdate" class="about-link" rel="" target="">
-     <span class="about-link-text"><iconify-icon role="img" inline="" icon="academicons:google-scholar-square" aria-label="Icon google-scholar-square from academicons Iconify.design set." title="Icon google-scholar-square from academicons Iconify.design set."></iconify-icon></span>
+     <span class="about-link-text"><iconify-icon role="img" inline="" icon="academicons:google-scholar-square" style="font-size: 2em;" aria-label="Icon google-scholar-square from academicons Iconify.design set." title="Icon google-scholar-square from academicons Iconify.design set."></iconify-icon></span>
   </a>
   <a href="/CV_Martin_Sjogard.pdf" class="about-link" rel="" target="">
-     <span class="about-link-text"><iconify-icon role="img" inline="" icon="academicons:cv-square" aria-label="Icon cv-square from academicons Iconify.design set." title="Icon cv-square from academicons Iconify.design set."></iconify-icon></span>
+     <span class="about-link-text"><iconify-icon role="img" inline="" icon="academicons:cv-square" style="font-size: 3em;" aria-label="Icon cv-square from academicons Iconify.design set." title="Icon cv-square from academicons Iconify.design set."></iconify-icon></span>
   </a>
   <a href="mailto:martinsjogard@gmail.com" class="about-link" rel="" target="">
-     <span class="about-link-text"><iconify-icon role="img" inline="" icon="fa-solid:envelope" aria-label="Icon envelope from fa-solid Iconify.design set." title="Icon envelope from fa-solid Iconify.design set."></iconify-icon></span>
+     <span class="about-link-text"><iconify-icon role="img" inline="" icon="fa-solid:envelope" style="font-size: 1.5em;" aria-label="Icon envelope from fa-solid Iconify.design set." title="Icon envelope from fa-solid Iconify.design set."></iconify-icon></span>
   </a>
 </div>
   </div>
