--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Martin Sjøgård | Brain and data stuff – Martin Sjogard</title>
+<title>Martin Sjøgård – Martin Sjogard</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -170,7 +170,8 @@ ul.task-list li input[type="checkbox"] {
   round " style="height: 20em; width: 20em;">
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Martin Sjøgård | Brain and data stuff</h1>
+<h1 class="title">Martin Sjøgård</h1>
+<p class="subtitle lead">Neuroscience and data</p>
 </div>
 <div class="quarto-title-meta">
   </div>
