--- a/index.html
+++ b/index.html
@@ -127,6 +127,22 @@ ul.task-list li input[type="checkbox"] {
     </a>
     <ul class="dropdown-menu" aria-labelledby="nav-menu-papers">    
         <li>
+    <a class="dropdown-item" href="https://www.nature.com/articles/s41467-025-61136-y">
+ <span class="dropdown-text">Hippocampal ripples predict motor learning during brief rest breaks in humans</span></a>
+  </li>  
+        <li>
+    <a class="dropdown-item" href="https://www.frontiersin.org/journals/neurology/articles/10.3389/fneur.2022.871166/full">
+ <span class="dropdown-text">A novel approach to estimating the cortical sources of sleep spindles using simultaneous EEG/MEG</span></a>
+  </li>  
+        <li>
+    <a class="dropdown-item" href="https://www.sciencedirect.com/science/article/abs/pii/S105381191930549X">
+ <span class="dropdown-text">Do the posterior midline cortices belong to the electrophysiological default-mode network?</span></a>
+  </li>  
+        <li>
+    <a class="dropdown-item" href="https://onlinelibrary.wiley.com/doi/pdf/10.1002/hbm.25247">
+ <span class="dropdown-text">Brain dysconnectivity relates to disability and cognitive impairment in multiple sclerosis</span></a>
+  </li>  
+        <li>
     <a class="dropdown-item" href="./posts/quicksummaries_localspindles/index.html">
  <span class="dropdown-text">Quick paper summary: Sleep spindles, motor learning and sleep-dependent memory consolidation</span></a>
   </li>  
