--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ ul.task-list li input[type="checkbox"] {
     </a>
     <ul class="dropdown-menu" aria-labelledby="nav-menu-posts">    
         <li>
-    <a class="dropdown-item" href="./posts/quicksummaries_localspindles/index.html">
+    <a class="dropdown-item" href="./posts/quicksummaries_localspindles/ind.qmd">
  <span class="dropdown-text">Quick paper summary: Sleep spindles, motor learning and sleep-dependent memory consolidation</span></a>
   </li>  
         <li>
@@ -143,7 +143,7 @@ ul.task-list li input[type="checkbox"] {
  <span class="dropdown-text">Brain dysconnectivity relates to disability and cognitive impairment in multiple sclerosis</span></a>
   </li>  
         <li>
-    <a class="dropdown-item" href="./posts/quicksummaries_localspindles/index.html">
+    <a class="dropdown-item" href="./posts/quicksummaries_localspindles/ind.qmd">
  <span class="dropdown-text">Quick paper summary: Sleep spindles, motor learning and sleep-dependent memory consolidation</span></a>
   </li>  
     </ul>
