--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ ul.task-list li input[type="checkbox"] {
      <span class="about-link-text"><iconify-icon role="img" inline="" icon="academicons:cv-square" style="font-size: 2em;" aria-label="Icon cv-square from academicons Iconify.design set." title="Icon cv-square from academicons Iconify.design set."></iconify-icon></span>
   </a>
   <a href="https://github.com/martinsjogard/" class="about-link" rel="" target="">
-     <span class="about-link-text">{{&lt; cib github size=2x &gt;}}</span>
+     <span class="about-link-text"><iconify-icon role="img" inline="" icon="cib:github" style="font-size: 2em;" aria-label="Icon github from cib Iconify.design set." title="Icon github from cib Iconify.design set."></iconify-icon></span>
   </a>
   <a href="mailto:martinsjogard@gmail.com" class="about-link" rel="" target="">
      <span class="about-link-text"><iconify-icon role="img" inline="" icon="fa-solid:envelope" style="font-size: 2em;" aria-label="Icon envelope from fa-solid Iconify.design set." title="Icon envelope from fa-solid Iconify.design set."></iconify-icon></span>
