deploy: a564ada13d3f1f42d00481eaa696bd9d876f35bc

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ ul.task-list li input[type="checkbox"] {
   <a href="https://scholar.google.com/citations?hl=en&amp;user=F59U3gEAAAAJ&amp;view_op=list_works&amp;sortby=pubdate" class="about-link" rel="" target="">
      <span class="about-link-text"><iconify-icon role="img" inline="" icon="academicons:google-scholar-square" style="font-size: 2em;" aria-label="Icon google-scholar-square from academicons Iconify.design set." title="Icon google-scholar-square from academicons Iconify.design set."></iconify-icon></span>
   </a>
-  <a href="/CV_Sjogard_Martin_generalized_biotech.pdf" class="about-link" rel="" target="">
+  <a href="/CV_b.pdf" class="about-link" rel="" target="">
      <span class="about-link-text"><iconify-icon role="img" inline="" icon="academicons:cv-square" style="font-size: 2em;" aria-label="Icon cv-square from academicons Iconify.design set." title="Icon cv-square from academicons Iconify.design set."></iconify-icon></span>
   </a>
   <a href="https://github.com/martinsjogard/" class="about-link" rel="" target="">
@@ -280,7 +280,7 @@ Martin Sjøgård<em>*, Vincent Wens, Jeroen Van Schependom, Lars Costers, Marie 
 Martin Sjøgård*, Xavier De Tiège, Alison Mary, Philippe Peigneux, Serge Goldman, Guy Nagels, Jeroen Van Schependom, Andrew J Quinn, Mark W Woolrich, Vincent Wens. <em>NeuroImage</em>, 200: 221–230</p></li>
 <li><p><strong><a href="https://www.frontiersin.org/journals/neurology/articles/10.3389/fneur.2022.871166/full">A novel approach to estimating the cortical sources of sleep spindles using simultaneous EEG/MEG (2022)</a></strong><br>
 Dimitrios Mylonas*, Martin Sjøgård*, Zhaoyue Shi, Bryan Baxter, Matti Hämäläinen, Dara S Manoach, Sheraz Khan. <em>Frontiers in Neurology</em>, 13:871166</p></li>
-<li><p><strong><a href="CV_Sjogard_Martin_generalized_biotech.pdf">Full list of publications</a></strong></p></li>
+<li><p><strong><a href="AllPublications.pdf">Full list of publications</a></strong></p></li>
 </ul>
 <hr>
 </section>
