deploy: 8188d00f6dfe3c45bfd89dde2e1398be5b0150d6

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ Martin Sjøgård<em>*, Vincent Wens, Jeroen Van Schependom, Lars Costers, Marie 
 Martin Sjøgård*, Xavier De Tiège, Alison Mary, Philippe Peigneux, Serge Goldman, Guy Nagels, Jeroen Van Schependom, Andrew J Quinn, Mark W Woolrich, Vincent Wens. <em>NeuroImage</em>, 200: 221–230</p></li>
 <li><p><strong><a href="https://www.frontiersin.org/journals/neurology/articles/10.3389/fneur.2022.871166/full">A novel approach to estimating the cortical sources of sleep spindles using simultaneous EEG/MEG (2022)</a></strong><br>
 Dimitrios Mylonas*, Martin Sjøgård*, Zhaoyue Shi, Bryan Baxter, Matti Hämäläinen, Dara S Manoach, Sheraz Khan. <em>Frontiers in Neurology</em>, 13:871166</p></li>
-<li><p><strong><a href="AllPublications.pdf">Full list of publications</a></strong></p></li>
+<li><p><strong><a href="https://github.com/martinsjogard/martinsjogard.github.io/blob/f2072bf81ca596703a59c44a577656ff1c8ea9eb/AllPublications.pdf">Full list of publications</a></strong></p></li>
 </ul>
 <hr>
 </section>
